[package]
name = "rust_os"
version = "0.1.0"
edition = "2018"

# the profile used for `cargo build`
[profile.dev]
# panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"] # We need the spin_no_std feature, since we don’t link the standard library



[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio" , "-display" ,"none"] # exiting the qemu without user interaction
test-success-exit-code = 33   # (0x10 << 1) | 1 = 0x101